Fixed error with array shift. Added Mollom support. Added ajax comment editing. Added ajax pagination. Added comments folding. Fixed bug with new coment under the pager.

--- a/ajax_comments.css
+++ b/ajax_comments.css
@@ -40,8 +40,17 @@
   filter: alpha(opacity=80);
 }
 
-.ajax-comments-processed a.pressed {
+.ajax-comments-title-processed a.pressed {
   text-decoration:none;
   border-bottom:1px dotted;
   outline:0;
+}
+
+/* Animated throbber for links and spans */
+html.js a.throbber,
+html.js span.throbber,
+a.throbber,
+span.throbber {
+  background: url(images/throbber-active.gif) no-repeat right center;  /* LTR */
+  padding-right: 16px;  /* LTR */
 }
